Orchestrator - Added http transport skeleteon
Docs
- Updated README.md
- Added Taskfile.yaml
- Updated api.yaml
