# api/v1/api.yaml
@@ -90,8 +90,12 @@ paths:
           description: This task did not exist
         422:
           description: Invalid data
-
-
+  /internal/ping:
+    get:
+      description: Ping master node to ensure it is running
+      responses:
+        200:
+          description: Master node is alive
   
 components:
   schemas:
